fix(DoDontExample): changed targeted class so video button is no longer off center

--- a/packages/gatsby-theme-carbon/src/components/DoDontExample/do-dont-example.scss
+++ b/packages/gatsby-theme-carbon/src/components/DoDontExample/do-dont-example.scss
@@ -149,7 +149,7 @@
   margin-bottom: 0;
 }
 
-// Video
-.#{$prefix}--example [class^='Video-module--video'] {
+//Video
+.#{$prefix}--example [class^='Video-module--video-container'] {
   margin-bottom: 0;
 }
